--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-moment": "^0.7.0",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.1",
