--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
+    "import-glob-loader": "^1.1.0",
     "jest": "20.0.4",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
