--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spacex-launcher",
+  "homepage": "http://zuzakowalska.github.io/spacex-launcher",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -63,7 +64,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
